--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "pack": "cp -R storage dist && tar cfv build.tgz dist/*"
   },
   "dependencies": {
+    "@floating-ui/dom": "^1.2.1",
+    "@popperjs/core": "^2.11.6",
     "esbuild": "^0.14.25",
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
